<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:checked="true"
        android:id="@+id/fragmentHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:checked="true"
        android:id="@+id/fragmentCategories"
        android:icon="@drawable/ic_category"
        android:title="@string/categories"/>

    <item
        android:checked="true"
        android:id="@+id/fragmentUploadPrescription"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/fragmentCart"
        android:checked="true"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"/>

    <item
        android:checked="true"
        android:id="@+id/fragmentAccount"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/account" />
</menu>