<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.user_registration.view.FragmentVerification">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_da"
        android:text="@string/text_otp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_verification_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

    <com.mukesh.OtpView
        android:id="@+id/otpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/baloo_da"
        android:inputType="number"
        android:itemBackground="@color/white"
        android:text="123456"
        app:OtpCursorColor="@color/color_primary"
        app:OtpItemCount="6"
        app:OtpLineColor="@color/color_primary_light"
        app:OtpViewType="rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/btn_text_verify"
        android:textAllCaps="false"
        app:cornerRadius="6dp"
        app:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/otpView"
        app:layout_constraintStart_toStartOf="@+id/otpView"
        app:layout_constraintTop_toBottomOf="@+id/otpView" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/text_resend_otp"
        app:layout_constraintEnd_toEndOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />


</androidx.constraintlayout.widget.ConstraintLayout>