<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentUploadPrescriptionInfo">

    <TextView
        android:id="@+id/addressHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/allerta"
        android:textColor="@color/color_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/address_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/divider_primary_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/divider2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/addressHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:gravity="start"
            android:hint="@string/primary_address"
            android:lines="3"
            android:maxLines="3"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spnDivision"
        style="@android:style/Widget.Material.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toStartOf="@id/spnDistrict"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <Spinner
        style="@android:style/Widget.Material.Spinner"
        android:id="@+id/spnDistrict"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@id/spnDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spnDivision"
        app:layout_constraintTop_toTopOf="@+id/spnDivision" />

    <Spinner
        android:id="@+id/spnUpazila"
        style="@android:style/Widget.Material.Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="24dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toStartOf="@id/postalCodeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnDivision" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postalCodeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:clipChildren="true"
        app:layout_constraintBottom_toBottomOf="@id/spnUpazila"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spnUpazila"
        app:layout_constraintTop_toTopOf="@+id/spnUpazila">

        <EditText
            android:id="@+id/edtPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:hint="@string/post_code"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_information"
        android:layout_marginTop="24dp"
        android:textColor="@color/color_primary"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textAllCaps="true"
        android:layout_marginBottom="36dp"
        app:layout_constraintTop_toBottomOf="@id/postalCodeLayout"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="24dp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textAllCaps="true"
        android:layout_marginBottom="36dp"
        app:layout_constraintTop_toBottomOf="@id/postalCodeLayout"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateOrder"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <include
        android:id="@+id/progressBar"
        layout="@layout/dialog_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>